Arreglos para dispositivos móviles

--- a/miPortafolio/home/templates/home.html
+++ b/miPortafolio/home/templates/home.html
@@ -57,6 +57,7 @@
         </div>
     </div>
 
+    <!-- Main con presentacion principal, cuadrado sobre mi, hobbies, y habilidades -->
     <div class="main">
         <section id="presentacion">
             <div id="imagen">
@@ -276,7 +277,7 @@
             </div>
         </section>
 
-         <!-- Arreglar para que no este descentrado-->
+        <!--Contacto-->
         <section id="contacto">
             <div class="formularioContacto">
                 <h1 id="textoContacto">Contacto</h1>
