--- a/miPortafolio/static/css/home.css
+++ b/miPortafolio/static/css/home.css
@@ -107,6 +107,15 @@ nav ul li a:hover {
 
 /* Estilos para el menú en móvil */
 @media (max-width: 768px) {
+
+    .logo{
+        font-size: 30px;
+    }
+
+    nav ul li a {
+        font-size: 18px; /* Tamaño de fuente reducido para pantallas pequeñas */
+    }
+
     .menu {
         display: none;
         flex-direction: column;
@@ -130,7 +139,7 @@ nav ul li a:hover {
     }
 
     .menu ul li {
-        margin: 10px 0;
+        margin: 5px 0;
     }
 
     .hamburger-menu {
@@ -318,6 +327,31 @@ nav ul li a:hover {
     flex: 0 0 calc(25% - 20px);
     box-sizing: border-box;
 }
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+    .fila {
+        flex-direction: column;
+        align-items: center; /* Alinea los elementos al centro */
+    }
+
+    #yo, #hobbies {
+        width: 90%; /* Ajusta el ancho para pantallas pequeñas */
+        margin: 10px 0; /* Espacio vertical entre los elementos */
+    }
+
+    .imagenesHobbies {
+        flex-direction: column; /* Cambia la dirección de flexbox a columna */
+        align-items: center; /* Alinea las imágenes al centro */
+    }
+
+    .imagenesHobbies img {
+        max-width: 80px; /* Ajusta el tamaño máximo de las imágenes */
+        margin: 10px 0; /* Espacio vertical entre las imágenes */
+        flex: 0 0 auto; /* Ajusta la flexibilidad de las imágenes */
+    }
+}
+
 
 /* Tooltips */
 .tooltip {
@@ -508,6 +542,34 @@ nav ul li a:hover {
     height: auto; /* Mantiene la proporción de la imagen */
 }
 
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+    #explicacionProyectos {
+        flex-direction: column; /* Cambia la dirección del flex a columna */
+        align-items: center; /* Centra los elementos horizontalmente */
+    }
+
+    #superior, #inferior {
+        flex-direction: column; /* Cambia la dirección del flex a columna */
+        width: 100%; /* Asegura que los divs ocupen el 100% del ancho del contenedor */
+        gap: 20px; /* Espacio vertical entre los proyectos */
+    }
+
+    .cuadro {
+        width: 90%; /* Ajusta el ancho de los proyectos para pantallas pequeñas */
+        margin: 10px 0; /* Espacio vertical entre los proyectos */
+    }
+
+    #iconos_proyectos {
+        flex-direction: column; /* Cambia la dirección del flex a columna */
+        align-items: center; /* Centra los íconos horizontalmente */
+    }
+
+    #iconos_proyectos a {
+        margin: 10px 0; /* Espacio vertical entre los íconos */
+    }
+}
+
 
 /* Contacto */
 #textoContacto {
@@ -583,6 +645,33 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #483d8b; /* Color de fondo cuando se pasa el ratón por encima */
     transform: scale(1.05); /* Efecto de escala al pasar el ratón */
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+    #contacto {
+        padding: 5% 0; /* Ajusta el padding superior e inferior para pantallas pequeñas */
+    }
+
+    .formularioContacto {
+        width: 90%; /* Ajusta el ancho del formulario para pantallas pequeñas */
+        padding: 20px; /* Reduce el padding para adaptarse mejor a pantallas pequeñas */
+        margin: 20px; /* Añade margen alrededor del formulario para evitar que esté pegado a los bordes de la pantalla */
+    }
+
+    #textoContacto {
+        font-size: 24px; /* Ajusta el tamaño del texto para pantallas pequeñas */
+    }
+
+    .imagenesContacto {
+        flex-direction: column; /* Cambia la dirección del flex a columna para pantallas pequeñas */
+        align-items: center; /* Centra las imágenes horizontalmente */
+        gap: 10px; /* Espacio vertical entre las imágenes */
+    }
+
+    .imagenesContacto a img {
+        max-width: 60px; /* Ajusta el tamaño máximo de las imágenes para pantallas pequeñas */
+    }
 }
 
 /* Pie de página */
