Arreglos de correo y visualizaciónd de la galería desde el móvil

--- a/miPortafolio/home/templates/home.html
+++ b/miPortafolio/home/templates/home.html
@@ -73,7 +73,7 @@
             <div id="divSobreMi">
                 <div id="primerSobreMi" class="fila">
                     <div id="yo" class="cuadro">
-                        <h1>{% trans "¿Quién soy?" %}</h1>
+                        <h1>¿Quién soy?</h1>
                         <p>Me llamo Lucía Cosío Artime, estoy terminando de cursar un máster de inteligencia artificial y siempre me ha apasionado el mundo de la informática. <br> Me gusta el desarrollo de aplicaciones Android (en un futuro me gustaría sacarme un curso de aplicaciones IOS) y también tengo un gran interés en la inteligencia artificial.
                         <br>He intentado desarrollar varias aplicaciones para aplicar mis habilidades técnicas, pulirlas y seguir aprendiendo.</p>
                         <button id="botonCV" onclick="descargarCV()">Descargar CV</button>
